Add `vimrc` under `persist` and use it

--- a/development-help/ai_vim_sandbox/docker-compose.yml
+++ b/development-help/ai_vim_sandbox/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       - ./persist/home:/home/${USERNAME}
       - ./persist/workspace:/workspace
       - ./persist/vim:/home/${USERNAME}/.vim
+      - ./persist/vimrc:/home/${USERNAME}/.vimrc
     working_dir: /workspace
 
   agent:
