--- a/development-help/ai_vim_sandbox/codex/Dockerfile
+++ b/development-help/ai_vim_sandbox/codex/Dockerfile
@@ -1,13 +1,13 @@
 FROM node:22-bookworm-slim
 
-# ---- build args for UID/GID matching ----
-ARG UID=1000
-ARG GID=1000
+# ---- build args for C_UID/C_GID matching ----
+ARG C_UID=1000
+ARG C_GID=1000
 ARG USERNAME=dev
 
-# Create group/user that match host UID/GID
-RUN groupadd -g ${GID} ${USERNAME} \
- && useradd -m -u ${UID} -g ${GID} -s /bin/bash ${USERNAME}
+# Create group/user that match host C_UID/C_GID
+RUN groupadd -g ${C_GID} ${USERNAME} \
+ && useradd -m -u ${C_UID} -g ${C_GID} -s /bin/bash ${USERNAME}
 
 # Useful tools (git is commonly needed; ca-certs for TLS)
 RUN apt-get update \
