--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,16 @@
-* filter=no_end_ws
+# To implement the `anonymize` git filter via `git config` do the following
+# git config --global filter.anonymize.clean \
+#   'sed    -e "s/<TELEPHONE_RE_PATTERN>/MY_PHONE_NUMBER/g" \
+#           -e "s/<EMAIL_RE_PATTERN>/MY_EMAIL_ADDRESS/g" \
+#           -e "s/MY_OPENAI_KEY \
+#           -e 's/\s\+$//'' # The last entry removes EOL whitespace
+# git config --global filter.anonymize.smudge \
+#    'sed   -e "s/MY_PHONE_NUMBER/<ACTUAL_PHONE_NUMBER>/g" \
+#           -e "s/MY_EMAIL_ADDRESS/<ACTUAL_EMAIL>/g" 
+#           -e "s/MY_OPENAI_KEY/<ACTUAL_OPENAI_KEY>/"'
+# NOTE: The last substitution **is not safe**. It's best to use an actual vault or manually replace each time
+*.md        filter=anonymize
+*.sh        filter=anonymize
+*.yml       filter=anonymize
+Dockerfile  filter=anonymize
+.gitattributes filter=anonymize
