Update `.gitignore` rules to allow descriptions
* Update `.gitignore` to track `.md` files under the codex home directory
* Create a first project_description.md` file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 .*.swp
 development-help/ai_vim_sandbox/persist/*
+!development-help/ai_vim_sandbox/persist/codex-home/
+development-help/ai_vim_sandbox/persist/codex-home/*
+!development-help/ai_vim_sandbox/persist/codex-home/*.md
 development-help/ai_vim_sandbox/.env
