--- a/development-help/ai_vim_sandbox/docker-compose.yml
+++ b/development-help/ai_vim_sandbox/docker-compose.yml
@@ -7,6 +7,7 @@ services:
         C_UID: ${C_UID}
         C_GID: ${C_GID}
         USERNAME: ${USERNAME:-dev}
+    user: ${C_UID}:${C_GID}
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       # optional default model for your wrapper scripts (Codex itself may manage models internally)
@@ -14,7 +15,7 @@ services:
     working_dir: /workspace
     volumes:
       # project workspace (bind mount)
-      - ./workspace:/workspace
+      - ./persist/workspace:/workspace
       # persistent Codex state/config (bind mount directory, not a Docker volume)
       - ./persist/codex-home:/home/${USERNAME:-dev}
     restart: unless-stopped
@@ -38,6 +39,7 @@ services:
         C_UID: ${C_UID}
         C_GID: ${C_GID}
         USERNAME: ${USERNAME}
+    user: ${C_UID}:${C_GID}
     container_name: vim-sandbox
     depends_on:
       - ollama
