--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,18 @@
-* filter=no_end_ws
+# To implement the `anonymize` git filter via `git config` do the following
+# NOTE: Remove the period `.` before the last two characters. It is required so the replacement doesn't happen below as
+# well
+# git config --global filter.anonymize.clean \
+#   'sed    -e "s/<TELEPHONE_RE_PATTERN>/MY_PHONE_NUMB.ER/g" \
+#           -e "s/<EMAIL_RE_PATTERN>/MY_EMAIL_ADDRE.SS/g" \
+#           -e "s/<OPENAI_RE_PATTERN>/MY_OPENAI_K.EY/ \
+#           -e 's/\s\+$//'' # The last entry removes EOL whitespace
+# git config --global filter.anonymize.smudge \
+#    'sed   -e "s/MY_PHONE_NUMB.ER/<ACTUAL_PHONE_NUMBER>/g" \
+#           -e "s/MY_EMAIL_ADDRE.SS/<ACTUAL_EMAIL>/g" \
+#           -e "s/MY_OPENAI_K.EY/<ACTUAL_OPENAI_KEY>/"'
+# NOTE: The last substitution **is not safe**. It's best to use an actual vault or manually replace each time
+*.md        filter=anonymize
+*.sh        filter=anonymize
+*.yml       filter=anonymize
+Dockerfile  filter=anonymize
+.gitattributes filter=anonymize
