--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 .*.swp
 development-help/ai_vim_sandbox/persist/*
+!development-help/ai_vim_sandbox/persist/litellm
+development-help/ai_vim_sandbox/persist/litellm/*
+!development-help/ai_vim_sandbox/persist/litellm/config.yaml
 development-help/ai_vim_sandbox/.env
